--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,3 +6,9 @@
   border-bottom: solid 1px lightgray;
   align-items: center;
 }
+
+.main {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
