--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,13 +1,19 @@
+:root {
+  --header-height: 50px;
+}
+
 .header {
   display: flex;
-  height: 50px;
+  height: var(--header-height);
   padding: 0 20px;
   border-bottom: solid 1px lightgray;
   align-items: center;
 }
 
 .main {
-  max-width: 1000px;
+  flex-grow: 1;
+  width: 1000px;
+  height: calc(100vh - var(--header-height));
   margin-left: auto;
   margin-right: auto;
 }
