--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,12 +1,22 @@
+.root {
+  height: 100%;
+}
+
 .notifications {
+  --title-height: 30px;
+
   & .title {
     font-size: 1.6rem;
+    height: var(--title-height);
   }
 
   & .list {
+    height: calc(100% - var(--title-height));
+    overflow-y: scroll;
   }
 }
 
 .content {
   border-top: solid 1px lightgray;
+  overflow-y: scroll;
 }
