--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -20,3 +20,11 @@
   border-top: solid 1px lightgray;
   overflow-y: scroll;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 50, 0.5);
+  border-radius: 5px;
+}
