--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
 .header {
   display: flex;
   height: var(--header-height);
-  padding: 0 20px;
+  padding: 0 24px;
   border-bottom: solid 1px lightgray;
   align-items: center;
 }
@@ -14,6 +14,7 @@
   flex-grow: 1;
   width: 1000px;
   height: calc(100vh - var(--header-height));
+  padding: 24px 0;
   margin-left: auto;
   margin-right: auto;
 }
