--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,21 +3,16 @@
 }
 
 .notifications {
-  --title-height: 30px;
-
-  & .title {
-    font-size: 1.6rem;
-    height: var(--title-height);
-  }
-
   & .list {
-    height: calc(100% - var(--title-height));
+    height: 100%;
     overflow-y: scroll;
   }
 }
 
 .content {
-  border-top: solid 1px lightgray;
+  border: solid 1px lightgray;
+  border-radius: 5px;
+  padding: 16px;
   overflow-y: scroll;
 }
 
