--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,7 +12,7 @@
 
 .main {
   flex-grow: 1;
-  width: 1000px;
+  width: fit-content;
   height: calc(100vh - var(--header-height));
   padding: 24px 0;
   margin-left: auto;
