--- a/src/components/TheHeader.module.css
+++ b/src/components/TheHeader.module.css
@@ -21,6 +21,34 @@
 }
 
 .setting {
-  width: 24px;
-  height: 24px;
+  position: relative;
+  --size: 36px;
+  width: var(--size);
+  height: var(--size);
+
+  & svg {
+    position: relative;
+    top: calc((var(--size) - 24px) / 2);
+    left: calc((var(--size) - 24px) / 2);
+    width: 24px;
+    height: 24px;
+  }
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+    border-radius: 50%;
+
+    opacity: 0;
+    transition: opacity 0.2s;
+  }
+
+  &:hover {
+    &::before {
+      opacity: 1;
+    }
+  }
 }
