--- a/src/components/NotificationListItem.module.css
+++ b/src/components/NotificationListItem.module.css
@@ -13,6 +13,12 @@
   background-color: lavender;
 }
 
+.unread {
+  & .title {
+    font-weight: bold;
+  }
+}
+
 .head {
   grid-row: 1/3;
   grid-column: 1;
