--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,8 @@ li {
 a {
   color: inherit;
   text-decoration: none;
+}
 
-  &:hover {
-    text-decoration: underline;
-  }
+a:hover {
+  text-decoration: underline;
 }
